--- a/projects/cifuzz-example/project.yaml
+++ b/projects/cifuzz-example/project.yaml
@@ -3,6 +3,8 @@ homepage: "https://my-api.example.com"
 
 # Language the project is written in:
 language: c++
+sanitizers:
+  - address
 
 # Provide the e-mail for the primary contact and others:
 # Un-comment the below lines to make auto-cc work.
